--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>PhishShield AI</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="front-end-files/styles/styles.css">
 </head>
 <body>
     <div class="container">
