Created a flask server to host the ML model

--- a/new_chrome_extension/popup.html
+++ b/new_chrome_extension/popup.html
@@ -10,10 +10,7 @@
     <h1>Email Extractor</h1>
     <button id="extractBtn">Extract Email</button>
     <div id="output">
-        <h2>Subject:</h2>
-        <p id="subject"></p>
-        <h2>Body:</h2>
-        <p id="body"></p>
+        <h2 id="prediction"></h2>
     </div>
     <script src="popup.js"></script>
 </body>
